Tue May  5 14:41:15 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * runserver.py: Added option to change data directory.
    * flax/searchserver/backends/xappy_backend.py: Reduced queue size
      to 1000, to keep memory usage down.

Fri May  1 14:07:23 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * flax/searchserver/application.py,
    * flax/searchserver/backends/xappy_backend.py: Re-implemented 
      structured search (was search/json) using GET. Added code to
      process all search params.      

Fri May  1 10:19:16 BST 2009  Tom Mortimer <tom@lemurconsulting.com>
    
    * docs/api.rst: Added a note about search.
    * flax/searchserver/application.py,
    * flax/searchserver/backends/xappy_backend.py: Changes to search
      param names.

Thu Apr 30 23:54:11 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/api.rst: Various updates to catch up with the code, and some
	  notes about some of the new stuff.

Thu Apr 30 17:28:12 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * docs/api.rst: Added paragraph about JSON search.
    * flax/searchserver/schema.py: Added exacttext support.
    * flax/searchserver/application.py:  Added search/json resource.
    * flax/searchserver/backends/xappy_backend.py: Added JSON search
      implementation.

Thu Apr 30 11:29:45 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * test_fields.php: Added test for field validation.

Wed Apr 29 15:29:44 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * flax/searchserver/schema.py: Fixed problem with language code.
    * flax/searchserver/application.py: Added param conversion to 
      search_simple.
    * flax/searchserver/backends/xappy_backend.py: Fixed search_simple.

Wed Apr 29 12:37:03 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * docs/api.rst,
    * flax/searchserver/application.py,
    * flax/searchserver/controller.py,
    * flax/searchserver/backends/xappy_backend.py,
    * flax/searchserver/backends/__init__.py,