@@ -1,3 +1,10 @@
+Fri May 08 23:30:39 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* flax/searchserver/backends/base_backend.py,
+	  flax/searchserver/backends/xappy_backend.py: Bring these two
+	  in-line with each other, and move some things which are generic
+	  into the base class.
+
 Tue May  5 14:41:15 BST 2009  Tom Mortimer <tom@lemurconsulting.com>
 
     * runserver.py: Added option to change data directory.
